Obscura (Pinhole camera) produces incorrect results with emission texture #36979

Closed
opened 2013-10-07 01:50:31 +02:00 by Nathan Brader · 11 comments

%%%--- Operating System, Graphics card ---
Windows 7, NVIDIA GeForce GTX 660

- Blender version with error, and version that worked ---

error in 2.68a

- Short description of error ---

In cycles render: when allowing light, emitted by a texture, to pass through a small hole, the image projected onto a face on the other side is physically incorrect.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

The attached "obscura_failure.blend" shows the emission texture on the right and the rendered the result on the left.%%%

%%%--- Operating System, Graphics card --- Windows 7, NVIDIA GeForce GTX 660 - Blender version with error, and version that worked --- error in 2.68a - Short description of error --- In cycles render: when allowing light, emitted by a texture, to pass through a small hole, the image projected onto a face on the other side is physically incorrect. - Steps for others to reproduce the error (preferably based on attached .blend file) --- The attached "obscura_failure.blend" shows the emission texture on the right and the rendered the result on the left.%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

%%%It's difficult to establish what exactly is failing. It renders correctly when the camera views the texture directly. Light also diffusely reflects realistically from nearby diffuse faces. This bug only seems to happen when the rays pass through the aperture.%%%

%%%It's difficult to establish what exactly is failing. It renders correctly when the camera views the texture directly. Light also diffusely reflects realistically from nearby diffuse faces. This bug only seems to happen when the rays pass through the aperture.%%%
Author

%%%When viewing it through the aperture, the texture maintains that very specific distortion as it is translated and rotated in space.%%%

%%%When viewing it through the aperture, the texture maintains that very specific distortion as it is translated and rotated in space.%%%
Author

%%%This is what I see: http://i.imgur.com/JjCX1hv.png%%%

%%%This is what I see: http://i.imgur.com/JjCX1hv.png%%%

%%%Same bug for me, but suprisingly it works when I disable Multiple Importance Sampling for the emitting plane. Warning though, without MIS the render will be very slow since the path tracer is having a hard time finding the light. So I guess there's something wrong with MIS, normally it's just supposed to guide the paths you sample so they find the lights more easily, but it shouldn't change the final render...%%%

%%%Same bug for me, but suprisingly it works when I disable Multiple Importance Sampling for the emitting plane. Warning though, without MIS the render will be very slow since the path tracer is having a hard time finding the light. So I guess there's something wrong with MIS, normally it's just supposed to guide the paths you sample so they find the lights more easily, but it shouldn't change the final render...%%%
Author

%%%Victor's workaround works on my work computer but not on my home computer (where I originally found the bug).

In case it's at all relevant: My home computer has the following spec:
CPU: Intel 3rd Generation Core i5-3570K CPU (4 x 3.40GHz, Ivy Bridge, Socket 1155, 6Mb L3 Cache, Intel Turbo Boost Technology 2.0)
RAM: 16 GB
GPU: NVIDIA GeForce GTX 660
OS: Windows 7 (64-bit)

My work computer:
CPU: Intel Core i7 CPU 860 @ 2.8GHz
RAM: 3 GB
GPU: NVIDIA GeForce 310
OS: Windows 7 (32-bit)
%%%

%%%Victor's workaround works on my work computer but not on my home computer (where I originally found the bug). In case it's at all relevant: My home computer has the following spec: CPU: Intel 3rd Generation Core i5-3570K CPU (4 x 3.40GHz, Ivy Bridge, Socket 1155, 6Mb L3 Cache, Intel Turbo Boost Technology 2.0) RAM: 16 GB GPU: NVIDIA GeForce GTX 660 OS: Windows 7 (64-bit) My work computer: CPU: Intel Core i7 CPU 860 @ 2.8GHz RAM: 3 GB GPU: NVIDIA GeForce 310 OS: Windows 7 (32-bit) %%%

This issue was referenced by blender/blender-addons-contrib@9c83ed774b

This issue was referenced by blender/blender-addons-contrib@9c83ed774bbc7b74242df0628f1de07df8f04df7

This issue was referenced by 9c83ed774b

This issue was referenced by 9c83ed774bbc7b74242df0628f1de07df8f04df7

Fixed now, thanks for the report.

Fixed now, thanks for the report.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 9c83ed774b.

Closed by commit 9c83ed774b.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#36979
No description provided.