Fix T36979: wrong render of textured mesh lights with multiple importance sampling.